--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-pytest==8.3.4
+pytest
+allure-pytest
 selene==2.0.0rc9
-selenium==4.28.1
-allure-pytest==2.13.5
-allure-python-commons~=2.13.5
-python-dotenv==1.0.1
-webdriver-manager==4.0.2
